--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
         We only provide great products combined with excellent customer service.
         See what our satisfied customers are saying about our service
       </p>
+
       <section class="box upperbox">
-        <span class="name">Colton Smith</span>
-        <span class="type">Verified Buyer</span>
+          <article>
+        <h2 class="name">Colton Smith</h2></article>
+        <h3 class="type">Verified Buyer</h3>
         <q>
           Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates
           impedit dolores fuga commodi nobis. Beatae amet omnis at incidunt
