--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
         See what our satisfied customers are saying about our service
       </p>
 
-      <section class="box upperbox">
-        <article>
-          <h2 class="name">Colton Smith</h2>
+      <section>
+        <article class="box upperbox">
+          <h2 class="name">Calton Smith</h2>
           <h3 class="type">Verified Buyer</h3>
           <q>
+            We needed the same printed design br
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates
             impedit dolores fuga commodi nobis. Beatae amet omnis at incidunt
             autem voluptate perferendis, delectus labore quisquam iste quaerat
