--- a/index.html
+++ b/index.html
@@ -30,7 +30,22 @@
             doloremque cum sapiente!
           </q>
         </article>
+        <article class="box middlebox">
+          <h2 class="name">Ire</h2>
+          <h3 class="type">Verified Buyer</h3>
+          <q>
+            We needed the same printed design br
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates
+            impedit dolores fuga commodi nobis. Beatae amet omnis at incidunt
+            autem voluptate perferendis, delectus labore quisquam iste quaerat
+            doloremque cum sapiente!
+          </q>
+        </article>
+
+
       </section>
+
+
       <section class="box middlebox">
         <span></span>
       </section>
