--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <h1>Laura</h1>
     <main>
       <h1>
         10,000+ of our <br />users love our <br />
