made text white

--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
       </section>
 
 
-      <section class="box middlebox">
+      <section class="box lowerbox">
         <span></span>
       </section>
-      <section class="box lowerbox"></section>
+      
     </main>
   </body>
 </html>
