--- a/index.html
+++ b/index.html
@@ -10,15 +10,10 @@
   <body>
     <h1>Laura</h1>
     <main>
-      <h1>
-        10,000+ of our <br />users love our <br />
-        products.
-      </h1>
-      <p>
-        We only provide great products combined with excellent customer service.
-        See what our satisfied customers are saying about our service
-      </p>
-
+      <h1>10,000+ of our <br />users love our <br />
+        products.</h1>
+      <p>We only provide great products combined with excellent customer service.
+        See what our satisfied customers are saying about our service </p>
       <section>
         <article class="box upperbox">
           <h2 class="name">Calton Smith</h2>
@@ -32,25 +27,26 @@
           </q>
         </article>
         <article class="box middlebox">
-          <h2 class="name">Ire</h2>
+          <h2 class="name">Irene</h2>
           <h3 class="type">Verified Buyer</h3>
           <q>
             We needed the same printed design br
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates
-            impedit dolores fuga commodi nobis. Beatae amet omnis at incidunt
-            autem voluptate perferendis, delectus labore quisquam iste quaerat
-            doloremque cum sapiente!
+            impedit dolores fuga commodi nobis. Beatae amet !
           </q>
         </article>
-
-
+      </article>
+      <article class="box lowerbox">
+        <h2 class="name">Anne</h2>
+        <h3 class="type">Verified Buyer</h3>
+        <q>
+          We needed the same printed design br
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates
+          impedit dolores fuga commodi nobis. Beatae amet !
+        </q>
+      </article>
       </section>
 
-
-      <section class="box lowerbox">
-        <span></span>
-      </section>
-      
     </main>
   </body>
 </html>
