--- a/index.html
+++ b/index.html
@@ -8,10 +8,22 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Laura</h1>
+  
     <main>
+      <aside>
+        <div class="star topbar">
+  
+        </div>
+        <div class="star middlebar">
+  
+        </div>
+        <div class="star lowerbar">
+  
+        </div>
+      </aside>
       <h1>10,000+ of our <br />users love our <br />
         products.</h1>
+        
       <p>We only provide great products combined with excellent customer service.
         See what our satisfied customers are saying about our service </p>
       <section>
@@ -19,11 +31,10 @@
           <h2 class="name">Calton Smith</h2>
           <h3 class="type">Verified Buyer</h3>
           <q>
-            We needed the same printed design br
+            We needed the same printed design 
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates
             impedit dolores fuga commodi nobis. Beatae amet omnis at incidunt
-            autem voluptate perferendis, delectus labore quisquam iste quaerat
-            doloremque cum sapiente!
+            autem voluptate perferendis.
           </q>
         </article>
         <article class="box middlebox">
@@ -32,7 +43,7 @@
           <q>
             We needed the same printed design br
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates
-            impedit dolores fuga commodi nobis. Beatae amet !
+            impedit dolores fuga commodi nobis. Beatae amet !Beatae amet omnis.
           </q>
         </article>
       </article>
@@ -46,7 +57,8 @@
         </q>
       </article>
       </section>
-
+ 
     </main>
+   
   </body>
 </html>
