--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         products.</h1>
       <p>We only provide great products combined with excellent customer service.
         See what our satisfied customers are saying about our service </p>
-      <section>
+      <section>ch
         <article class="box upperbox">
           <h2 class="name">Calton Smith</h2>
           <h3 class="type">Verified Buyer</h3>
