--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
       </section>
       <section class="btmHalf">
         <article class="box upperbox">
+          <img class="profile pic1" src="images/pic1.jpeg" alt="">
           <h2 class="name">Calton Smith</h2>
           <h3 class="type">Verified Buyer</h3>
           <q>
@@ -63,6 +64,9 @@
           </q>
         </article>
         <article class="box middlebox">
+          
+            <img class="profile pic2" src="images/pic2.jpeg" alt="">
+          
           <h2 class="name">Irene</h2>
           <h3 class="type">Verified Buyer</h3>
           <q>
@@ -73,6 +77,7 @@
         </article>
       </article>
       <article class="box lowerbox">
+        <img class="profile pic3" src="images/pic3.png" alt="">
         <h2 class="name">Anne</h2>
         <h3 class="type">Verified Buyer</h3>
         <q>
